# financetracker

./: .gitignore  Cargo.toml  README.md  config.toml
.cargo/: config.toml
.github/workflows/: ci.yml
.sqlx/: query-00dccd8e7b853d78f9e647306d37047599fa91566f8905aa5e9ff467e24e1244.json  query-424f1a0286cc1ecb1d8d1619157b9290764f1406cb361345a30d8d1c8fc87f30.json  query-75025f479a23bde3fa812bd20d62df1d7b60d6f93e67199247838ab730a9b1ad.json  query-987d332817d95b1d53675c922df85192c0a01f44c7cbcc7d36cc243f32ef1481.json  query-ac0bc7dc9e3818d493d42f6ae3b0b201ee7cce19a1aa2443e863e0e5b68199ce.json  query-cbc412815996b7a6ba7b2abf376ececf9ff8dab9d7c475a3dffa7ec363b85715.json  query-e6c0283fc45116aabf22525d301d2154f2963822928cf0657bd5f1766610c25e.json  query-e9c9f9f9ca4091e16427a8dd65803ddfd8467be4feb434e622358038892e71b8.json  query-eb4259a000604d57331c1e217ba8b78bd73b13fe2326016c25a548cf9a1b75b4.json
backend/: .env
backend/migrations/: 000_enable_extensions.sql  001_create_users.sql  002_create_transactions.sql  003_create_budgets.sql  004_create_sessions.sql  005_create_transaction_embeddings.sql
frontend/: App.css  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  analytics.ts  api.ts  index.css  types.ts
src/: app.rs  auth.rs  embeddings.rs  handlers.rs  lib.rs  main.rs  models.rs
tests/: embedding_tests.rs  jwt_tests.rs  semantic_search_tests.rs  smoke_tests.rs
tests/common/: mod.rs
