[package]
name = "financetracker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "runtime-tokio-rustls", "macros", "migrate", "uuid", "chrono", "rust_decimal"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
argon2 = "0.5.3"
rand_core = "0.9.3"
rand = "0.9.2"
rust_decimal = { version = "1", features = ["serde"] }
tower-http = { version = "0.6.8", features = ["cors, fs"] }
